<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_shape"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/closeBtnManageAdmin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:contentDescription="@string/closeButton"
        android:paddingStart="0dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        app:srcCompat="@drawable/xbtn"
        app:tint="#f7fff2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/edit_product"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_shape"
        android:orientation="vertical"
        android:paddingStart="@dimen/_40sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_40sdp"
        android:paddingBottom="@dimen/_40sdp">

        <ImageView
            android:id="@+id/manageProductImage"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_of_the_product"
            app:layout_constraintEnd_toEndOf="parent" />


        <EditText
            android:id="@+id/manageProductName"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/productName"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false" />

        <EditText
            android:id="@+id/manageProductCost"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            android:hint="@string/productCost"
            android:inputType="number" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/updateButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/_85sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_5sdp"
                android:backgroundTint="@color/colorOrange"
                android:text="@string/updateButton"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10ssp" />

            <Button
                android:id="@+id/deleteButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/_85sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:backgroundTint="@color/colorOrange"
                android:text="@string/deleteButton"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
