<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_shape"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/closeBtnAdmin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:contentDescription="@string/closeButton"
        android:paddingStart="0dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        app:srcCompat="@drawable/xbtn"
        app:tint="#f7fff2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_shape"
        android:orientation="vertical"
        android:padding="@dimen/_40sdp">

        <ImageView
            android:id="@+id/chosenImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/chosen_image_for_product_upload"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/productName"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false" />

        <EditText
            android:id="@+id/productCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/productCost"
            android:inputType="number" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chooseButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/rounded_edges"
            android:ems="14"
            android:text="@string/chooseButton"
            android:textAllCaps="true"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/_10ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/rounded_edges"
            android:ems="14"
            android:text="@string/uploadButton"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/_10ssp" />

        <ProgressBar
            android:id="@+id/uploadProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>
</LinearLayout>
