...
        android:textAllCaps="true"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/adminRewardsContainer"
        app:layout_constraintTop_toBottomOf="@id/adminRewardsPointsViewer" />

    <ImageView
        android:id="@+id/addAProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:contentDescription="@string/add_a_product"
        android:src="@drawable/add_products"
...
        app:layout_constraintEnd_toEndOf="@+id/adminRewardsContainer"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/adminRewardsContainer"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/adminRewardsRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toBottomOf="@+id/adminRewardsContainer"
        app:layout_constraintLeft_toLeftOf="parent"
...
