<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_shape"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:contentDescription="@string/closeButton"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        app:srcCompat="@drawable/xbtn"
        app:tint="#f7fff2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/popupImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/popupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="30dp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/popupQr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/qrCode"
        android:elevation="5dp"
        android:gravity="center"
        app:shapeAppearanceOverlay="@style/roundedImageViewRoundedSquare"
        app:strokeColor="@color/colorOrange"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/popupCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="0sp" />

</LinearLayout>
