...
        app:layout_constraintEnd_toEndOf="@+id/rewardsContainer"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/rewardsContainer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rewardsPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pointsRewards"
        android:textSize="32sp"
        android:textStyle="bold"
...
        android:textAllCaps="true"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/rewardsContainer"
        app:layout_constraintTop_toBottomOf="@id/rewardsPointsViewer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rewardsRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toBottomOf="@+id/rewardsContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
...
