...
            android:contentDescription="@string/pointsHolderTimer"
            app:layout_constraintEnd_toEndOf="@+id/timerContainer"
            app:layout_constraintStart_toStartOf="@+id/timerContainer"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usersPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pointsTimer"
            android:textSize="32sp"
            android:textStyle="bold"
...
